--- a/Assignment-1/css/style.css
+++ b/Assignment-1/css/style.css
@@ -19,6 +19,7 @@ header {
 }
 
 .header-left {
+    width: 40%;
     margin-left: 32px;
     color: #ffffff;
 }
@@ -74,6 +75,7 @@ header {
 
 .header-right {
     display: flex;
+    width: 50%;
     margin-left: auto;
     margin-right: 40px;
     align-items: center;
@@ -93,7 +95,7 @@ header {
 
 .header-right input {
     height: 54px;
-    width: 277px;
+    width: 300px;
     padding: 0;
 }
 
@@ -118,19 +120,24 @@ header {
     border: none;
 }
 
+.HiUser {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .inp {
     border: none;
 }
 
 .notif {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     border-right: 1px solid #433c72;
 }
 
 .circle2 {
     border: 2px solid #ffffff;
-    width: 60px;
+    width: 6%;
     border-radius: 50%;
     padding: 4px 18px;
     font-size: 22px;
@@ -139,7 +146,7 @@ header {
 
 .circle3 {
     border: 2px solid #ffffff;
-    width: 60px;
+    width: 6%;
     border-radius: 50%;
     padding: 4px 16px;
     font-size: 22px;
@@ -147,8 +154,32 @@ header {
     margin-right: 5px;
 }
 
+label {
+    position: relative;
+}
+
+label::before {
+    content: "";
+    position: absolute;
+    right: 5px;
+    top: -8px;
+    bottom: 0;
+    width: 50px;
+    height: 40px;
+    background: url("./../assets/search-bar-icon.svg") center / contain no-repeat;
+}
+
+input {
+    padding: 10px 30px;
+}
+
 .askBeroe-small {
     display: none;
+}
+
+.askBeroe {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .search-small {
@@ -161,13 +192,18 @@ header {
     box-shadow: -1px 2px 11px 0 rgb(35 58 195 / 11%);
 }
 
+.navBar ul li a {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
 .nav {
     display: flex;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #776bc8;
+    background-color: #675DB0;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -212,8 +248,8 @@ header {
 }
 
 .heading {
-    min-height: 50vh;
-    background: #776bc8;
+    /* min-height: 50vh;*/
+    background: #675DB0;
     padding: 2% 2% 2% 2%;
     z-index: -999;
 }
@@ -223,8 +259,7 @@ header {
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 300px;
-    padding-left: 3.125%;
-    padding-top: 10px;
+    padding-left: 2%;
     min-height: 14px;
     font-family: 'Montserrat';
     font-size: 12px;
@@ -237,11 +272,11 @@ header {
 }
 
 .dis1 {
-    padding-top: 80px;
+    padding-top: 40px;
     width: 100%;
     height: 19px;
     font-family: Montserrat;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -251,8 +286,8 @@ header {
 }
 
 .sub-head {
-    padding-top: 10px;
-    padding-left: 3.125%;
+    padding-top: 5px;
+    padding-left: 2%;
 }
 
 aside {
@@ -261,7 +296,7 @@ aside {
     left: 67.5%;
     top: 183px;
     width: 29.375%;
-    height: 150%;
+    /* height: 150%;*/
     overflow: hidden;
     text-overflow: ellipsis;
     box-shadow: 0 2px 5px 0 rgba(130, 130, 130, 0.31);
@@ -271,7 +306,7 @@ aside {
 .heading-next {
     width: 60%;
     font-family: 'Titillium';
-    font-size: 26px;
+    font-size: 30px;
     font-weight: bold;
     font-stretch: normal;
     font-style: normal;
@@ -281,6 +316,7 @@ aside {
 }
 
 .heading-and-image {
+    padding-top: 1%;
     display: flex;
     flex-direction: row;
 }
@@ -321,10 +357,10 @@ aside {
 } */
 
 article {
-    margin-left: 41px;
+    margin-left: 4%;
     margin-top: 40px;
     height: 100%;
-    width: 100%;
+    width: 96%;
 }
 
 .topheading {
@@ -378,7 +414,7 @@ article {
 
 .cell {
     font-family: 'Open Sans', sans-serif;
-    font-size: 60%;
+    font-size: 80%;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -405,6 +441,7 @@ article {
 .cellgridhead {
     display: flex;
     flex-direction: row;
+    height: 68px;
     width: 74%;
     margin-top: 2px;
 }
@@ -421,6 +458,10 @@ article {
     padding-right: 5px;
     height: 32px;
     padding-left: 1px;
+}
+
+.side-cell-second {
+    padding-top: 1%;
 }
 
 .side-cells {
@@ -449,19 +490,21 @@ article {
 } */
 
 .context {
-    width: 32px;
-    height: 32px;
+    width: 28px;
+    height: 28px;
     object-fit: contain;
 }
 
 .side-context {
     display: inline;
+    width: 40px;
+    height: 40px;
     object-fit: contain;
 }
 
 .close-discussion {
     padding-left: 2px;
-    background-color: #776bc8;
+    background-color: #675DB0;
     padding: 4px 10px 4px 10px;
     border: 2px solid #ffffff;
     border-radius: 12px;
@@ -475,30 +518,40 @@ article {
     letter-spacing: normal;
 }
 
+.close-discussion:hover {
+    background-color: #f6f6f6;
+    color: #675DB0;
+}
+
 .reply {
     width: 200px;
     background-color: #5d52a8;
-    padding: 8px 8px 8px 8px;
+    border: none;
+    padding: 12px 10px 12px 10px;
     border-radius: 8px;
     font-family: 'Titillium';
     font-size: 12px;
-    font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
+    font-weight: 800;
     letter-spacing: normal;
     text-align: center;
     color: #ffffff;
 }
 
+.reply:hover {
+    border: 1px solid #5d52a8;
+    background-color: #ffffff;
+    color: #5d52a8;
+}
+
 .reply-section {
+    padding-top: 30px;
     display: flex;
     flex-direction: column;
-    padding-left: 2%;
+    padding-left: 4%;
 }
 
 .side-header {
-    padding-top: 3%;
+    padding-top: 10%;
 }
 
 .side-heading {
@@ -517,7 +570,7 @@ article {
 
 .side-sub-heading {
     padding-left: 4%;
-    padding-top: 2%;
+    padding-top: 6%;
     width: 100%;
     font-family: 'Montserrat';
     font-size: 12px;
@@ -532,7 +585,7 @@ article {
 .side-para {
     padding-left: 4%;
     padding-top: 3%;
-    width: 100%;
+    width: 80%;
     font-family: 'OpenSans';
     font-size: 16px;
     font-weight: 600;
@@ -543,7 +596,7 @@ article {
     color: #464646;
 }
 
-.original-comment {
+.side-para .original-comment {
     width: 122px;
     height: 19px;
     font-family: 'OpenSans';
@@ -580,6 +633,7 @@ article {
 }
 
 .cell-comment-link {
+    padding-top: 10px;
     font-family: 'OpenSans';
     font-size: 14px;
     font-weight: 600;
@@ -588,6 +642,11 @@ article {
     line-height: normal;
     letter-spacing: normal;
     color: #5d52a8;
+}
+
+.bottom-comment-link {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .paragraph-main {
@@ -632,8 +691,8 @@ article {
 }
 
 .paragraph-main-side {
-    font-family: 'OpenSans';
-    font-size: 16px;
+    font-family: 'Open Sans';
+    font-size: 14px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -645,6 +704,7 @@ article {
 .sub-comment-side {
     padding-left: 4%;
     padding-top: 3%;
+    width: 80%;
     font-family: 'OpenSans';
     font-size: 16px;
     font-weight: normal;
@@ -669,12 +729,16 @@ article {
     color: #5d52a8;
 }
 
+.follow-side-div {
+    padding-top: 15px;
+}
+
 .content-side {
     display: block;
 }
 
 .content-one {
-    padding-bottom: 5%;
+    padding-bottom: 3%;
 }
 
 footer {
