--- a/Assignment-1/css/style.css
+++ b/Assignment-1/css/style.css
@@ -19,7 +19,7 @@ header {
 }
 
 .header-left {
-    width: 40%;
+    width: 30%;
     margin-left: 32px;
     color: #ffffff;
 }
@@ -27,6 +27,13 @@ header {
 .close-btn {
     padding-top: 10px;
     padding-left: 5px;
+}
+
+.search-sm {
+    width: 130%;
+    height: 20%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .header-left a {
@@ -95,7 +102,7 @@ header {
 
 .header-right input {
     height: 54px;
-    width: 300px;
+    width: 320px;
     padding: 0;
 }
 
@@ -121,8 +128,12 @@ header {
 }
 
 .HiUser {
-    padding-left: 20px;
-    padding-right: 20px;
+    font-size: 100%;
+    height: 56px;
+    padding: 10px;
+    padding-left: 2%;
+    padding-right: 2%;
+    border-left: 1px solid #433c72;
 }
 
 .inp {
@@ -130,26 +141,26 @@ header {
 }
 
 .notif {
-    padding-left: 20px;
-    padding-right: 20px;
-    border-right: 1px solid #433c72;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 .circle2 {
     border: 2px solid #ffffff;
     width: 6%;
     border-radius: 50%;
-    padding: 4px 18px;
-    font-size: 22px;
+    padding: 1px 18px;
+    font-size: 28px;
     margin-left: 10px;
+    margin-right: 5px;
 }
 
 .circle3 {
     border: 2px solid #ffffff;
     width: 6%;
     border-radius: 50%;
-    padding: 4px 16px;
-    font-size: 22px;
+    padding: 1px 16px;
+    font-size: 28px;
     margin-left: 10px;
     margin-right: 5px;
 }
@@ -178,8 +189,12 @@ input {
 }
 
 .askBeroe {
-    padding-left: 20px;
-    padding-right: 20px;
+    font-size: 100%;
+    height: 54px;
+    padding: 10px;
+    border-right: 1px solid #433c72;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 .search-small {
@@ -774,6 +789,9 @@ footer {
         padding-right: 10px;
         border-right: 1px solid #433c72;
     }
+    .down {
+        display: none;
+    }
     .HiUser {
         display: none;
     }
@@ -838,5 +856,17 @@ footer {
     .navBar {
         position: static;
         box-shadow: 0 0 0 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .search-small {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .circle3 {
+        padding: 1px 9px;
     }
 }
